RESOLVED FIXED185773
File's structured serialization should serialize lastModified attribute
https://bugs.webkit.org/show_bug.cgi?id=185773
Summary File's structured serialization should serialize lastModified attribute
Chris Dumez
Reported 2018-05-18 10:49:59 PDT
Re-sync & unskip web-platform-tests/workers/semantics/structured-clone/ after https://github.com/w3c/web-platform-tests/issues/10799.
Attachments
Patch (136.72 KB, patch)
2018-05-18 13:59 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.25 MB, application/zip)
2018-05-18 15:05 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (2.86 MB, application/zip)
2018-05-18 15:13 PDT, EWS Watchlist
no flags
Patch (146.89 KB, patch)
2018-05-18 15:26 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews206 for win-future (12.77 MB, application/zip)
2018-05-18 21:03 PDT, EWS Watchlist
no flags
Patch (148.74 KB, patch)
2018-05-21 14:09 PDT, Chris Dumez
no flags
Patch (148.73 KB, patch)
2018-05-21 14:19 PDT, Chris Dumez
no flags
Patch (148.74 KB, patch)
2018-05-21 14:25 PDT, Chris Dumez
no flags
Patch (148.93 KB, patch)
2018-05-21 18:42 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-05-18 13:59:18 PDT
EWS Watchlist
Comment 2 2018-05-18 15:05:13 PDT
Comment on attachment 340735 [details] Patch Attachment 340735 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/7725778 New failing tests: fast/storage/serialized-script-value.html imported/w3c/web-platform-tests/IndexedDB/keypath-special-identifiers.htm
EWS Watchlist
Comment 3 2018-05-18 15:05:14 PDT
Created attachment 340741 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4 2018-05-18 15:13:20 PDT
Comment on attachment 340735 [details] Patch Attachment 340735 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/7725852 New failing tests: fast/storage/serialized-script-value.html imported/w3c/web-platform-tests/IndexedDB/keypath-special-identifiers.htm
EWS Watchlist
Comment 5 2018-05-18 15:13:22 PDT
Created attachment 340744 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Chris Dumez
Comment 6 2018-05-18 15:26:22 PDT
EWS Watchlist
Comment 7 2018-05-18 21:02:57 PDT
Comment on attachment 340747 [details] Patch Attachment 340747 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7728784 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 8 2018-05-18 21:03:08 PDT
Created attachment 340770 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Chris Dumez
Comment 9 2018-05-21 13:04:34 PDT
ping review?
youenn fablet
Comment 10 2018-05-21 13:20:03 PDT
Comment on attachment 340747 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=340747&action=review > Source/WebCore/fileapi/File.h:87 > + const std::optional<double>& lastModifiedOverride() const { return m_overrideLastModifiedDate; } Is there a reason to pass a std::optional<double> in deserialize but here return a const& ? > Source/WebCore/fileapi/File.h:115 > + std::optional<double> m_overrideLastModifiedDate; I guess this is mandated by File IDL? > LayoutTests/imported/w3c/web-platform-tests/workers/semantics/structured-clone/shared-expected.txt:1 > +CONSOLE MESSAGE: line 19: ReferenceError: Can't find variable: SharedWorker Might want to skip this one.
Chris Dumez
Comment 11 2018-05-21 13:25:19 PDT
Comment on attachment 340747 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=340747&action=review >> Source/WebCore/fileapi/File.h:115 >> + std::optional<double> m_overrideLastModifiedDate; > > I guess this is mandated by File IDL? Actually, the IDL is using "long long" which maps to int64_t. I'll update my patch to use this consistently internally.
Chris Dumez
Comment 12 2018-05-21 13:27:33 PDT
Comment on attachment 340747 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=340747&action=review >> Source/WebCore/fileapi/File.h:87 >> + const std::optional<double>& lastModifiedOverride() const { return m_overrideLastModifiedDate; } > > Is there a reason to pass a std::optional<double> in deserialize but here return a const& ? I'll use const & consistently.
Chris Dumez
Comment 13 2018-05-21 14:09:10 PDT
WebKit Commit Bot
Comment 14 2018-05-21 14:11:45 PDT
Comment on attachment 340886 [details] Patch Rejecting attachment 340886 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 340886, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/7756691
Chris Dumez
Comment 15 2018-05-21 14:19:04 PDT
WebKit Commit Bot
Comment 16 2018-05-21 14:23:37 PDT
Comment on attachment 340889 [details] Patch Rejecting attachment 340889 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 340889, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Youen Fablet found in /Volumes/Data/EWS/WebKit/LayoutTests/imported/w3c/ChangeLog does not appear to be a valid reviewer according to contributors.json. /Volumes/Data/EWS/WebKit/LayoutTests/imported/w3c/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/7757009
Chris Dumez
Comment 17 2018-05-21 14:25:21 PDT
WebKit Commit Bot
Comment 18 2018-05-21 14:53:53 PDT
Comment on attachment 340892 [details] Patch Clearing flags on attachment: 340892 Committed r232030: <https://trac.webkit.org/changeset/232030>
WebKit Commit Bot
Comment 19 2018-05-21 14:53:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 20 2018-05-21 14:55:22 PDT
WebKit Commit Bot
Comment 21 2018-05-21 16:39:44 PDT
Re-opened since this is blocked by bug 185850
Chris Dumez
Comment 22 2018-05-21 18:42:31 PDT
WebKit Commit Bot
Comment 23 2018-05-21 19:24:24 PDT
Comment on attachment 340939 [details] Patch Clearing flags on attachment: 340939 Committed r232043: <https://trac.webkit.org/changeset/232043>
WebKit Commit Bot
Comment 24 2018-05-21 19:24:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.