Source/WebCore/fileapi/File.h
@@ -38,7 +38,7 @@ class URL;
 class File final : public Blob {
 public:
     struct PropertyBag : BlobPropertyBag {
-        std::optional<long long> lastModified;
+        std::optional<int64_t> lastModified;
     };
 
     static Ref<File> create(const String& path)
@@ -52,9 +52,9 @@ public:
         return adoptRef(*new File(WTFMove(blobPartVariants), filename, propertyBag));
     }
 
-    static Ref<File> deserialize(const String& path, const URL& srcURL, const String& type, const String& name)
+    static Ref<File> deserialize(const String& path, const URL& srcURL, const String& type, const String& name, const std::optional<int64_t>& lastModified = std::nullopt)
     {
-        return adoptRef(*new File(deserializationContructor, path, srcURL, type, name));
+        return adoptRef(*new File(deserializationContructor, path, srcURL, type, name, lastModified));
     }
 
     // Create a file with a name exposed to the author (via File.name and associated DOM properties) that differs from the one provided in the path.
@@ -83,7 +83,8 @@ public:
     const String& relativePath() const { return m_relativePath; }
     void setRelativePath(const String& relativePath) { m_relativePath = relativePath; }
     const String& name() const { return m_name; }
-    WEBCORE_EXPORT double lastModified() const;
+    WEBCORE_EXPORT int64_t lastModified() const; // Number of milliseconds since Epoch.
+    const std::optional<int64_t>& lastModifiedOverride() const { return m_lastModifiedDateOverride; } // Number of milliseconds since Epoch.
 
     static String contentTypeForFile(const String& path);
 
@@ -100,7 +101,7 @@ private:
     File(const Blob&, const String& name);
     File(const File&, const String& name);
 
-    File(DeserializationContructor, const String& path, const URL& srcURL, const String& type, const String& name);
+    File(DeserializationContructor, const String& path, const URL& srcURL, const String& type, const String& name, const std::optional<int64_t>& lastModified);
 
     static void computeNameAndContentType(const String& path, const String& nameOverride, String& effectiveName, String& effectiveContentType);
 #if ENABLE(FILE_REPLACEMENT)
@@ -111,7 +112,7 @@ private:
     String m_relativePath;
     String m_name;
 
-    std::optional<int64_t> m_overrideLastModifiedDate;
+    std::optional<int64_t> m_lastModifiedDateOverride;
     mutable std::optional<bool> m_isDirectory;
 };
 
